# phenotype-router

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  Justfile  LICENSE-APACHE  README.md  SPEC.md  WORKLOG.md  deny.toml  flake.nix  llms.txt  llvm-cov.toml
.github/workflows/: bench.yml  cargo-audit.yml  cargo-deny.yml  ci.yml  deny.yml  sbom.yml  trufflehog.yml
bench/: Makefile  README.md  bench_routing_e2e_test.go  decision.go  decision_test.go  go.mod  runner.go  runner_test.go
bench/bench-results/: README.md  baseline-2026-06-21.md  e2e-default.txt  e2e-fast.txt  e2e-pickweighted.txt  p95-soak.txt  throughput.txt
bench/cmd/p95_latency/: main.go
bench/cmd/throughput/: main.go
benches/: decision.rs
docs/: architecture.md  concept.md  perf-budget.md
nexus/: Cargo.toml
nexus/.github/workflows/: ci.yml
nexus/src/: discovery.rs  error.rs  health.rs  lib.rs  registry.rs  service.rs
src/: bifrost_adapter.rs  chaos.rs  decision.rs  hello_world.rs  lib.rs  otel.rs  sdk.rs  tracing.rs
src/plugins/: contextfolding.rs  mod.rs  promptadapter.rs  researchintel.rs
src/plugins/contextfolding/: PREDICTIVE.md
src/plugins/promptadapter/: PREDICTIVE.md
src/plugins/researchintel/: PREDICTIVE.md
tests/: chaos_matrix.rs  decision_e2e.rs  hello_world.rs  otlp_smoke.rs  plugin_chain.rs
